<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFEFEF"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10px"
        android:background="@drawable/time_series_bg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="420dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_id_revise"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="180dp"
                    android:gravity="center_horizontal"
                    android:paddingRight="120dp"
                    android:text="@string/time_series_revise"
                    android:textColor="#FFFFFF"
                    android:textSize="20px" />

                <TextView
                    android:id="@+id/flow_tv_totalflow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_id_revise"
                    android:background="@null"
                    android:gravity="center_horizontal"
                    android:paddingRight="120dp"
                    android:text="0.00000"
                    android:textColor="#FFFFFF"
                    android:textSize="20px"
                    />

                <Button
                    android:id="@+id/flow_btn_confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/flow_tv_totalflow"
                    android:layout_marginLeft="70dp"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/btn_time_series_selector"
                    android:gravity="center"
                    android:text="@string/time_series_coverage"
                    android:textColor="#FFFFFF"
                    android:textSize="24px" />


            </RelativeLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tv_id_protect"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="100dp"
                        android:layout_marginTop="180dp"
                        android:gravity="center_horizontal"
                        android:text="@string/time_series_protect"
                        android:textColor="#FFFFFF"
                        android:textSize="20px" />

                    <TextView
                        android:id="@+id/flow_tv_safe"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_id_protect"
                        android:layout_marginLeft="100dp"
                        android:background="@null"
                        android:gravity="center_horizontal"
                        android:text="0.00000"
                        android:textColor="#FFFFFF"
                        android:textSize="20px"

                        />

                    <Button
                        android:id="@+id/flow_btn_open"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/flow_tv_safe"
                        android:layout_marginLeft="150dp"
                        android:layout_marginTop="40dp"
                        android:background="@drawable/btn_time_series_selector"
                        android:gravity="center"
                        android:text="开始"
                        android:textColor="#FFFFFF"
                        android:textSize="24px" />
                    <Button
                        android:id="@+id/flow_btn_close"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/flow_tv_safe"
                        android:layout_toRightOf="@+id/flow_btn_open"
                        android:layout_marginTop="40dp"
                        android:layout_marginLeft="30dp"
                        android:background="@drawable/btn_time_series_selector"
                        android:gravity="center"
                        android:text="关闭"
                        android:textColor="#FFFFFF"
                        android:textSize="24px" />

                </RelativeLayout>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/time_series_time"
                android:textColor="#8B8C95"
                android:textSize="30px" />
           <TextView
               android:id="@+id/plc_setting"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="34px"
               android:text="PlC设置"
               android:layout_gravity="center"/>
            </LinearLayout>


            <Button
                android:id="@+id/btn_time_series_affirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_time_series_selector"
                android:text="@string/time_series_affirm"
                android:textColor="#FFFFFF"
                android:textSize="24px" />

        </LinearLayout>


    </LinearLayout>


